#
# $Header: /cvsroot/xlt/Xlt/doc/Makefile.am,v 1.9 2005/09/12 20:56:03 rwscott Exp $
#

MAINTAINERCLEANFILES=Makefile.in
EXTRA_DIST = $(MANS) $(html_HTML)

xltdir = $(includedir)/Xlt

mandir = $(prefix)/man
man_MANS = \
StrokeInstall.3 Strokes.3 \
Xlt.3 \
XltAnimatedButton.3 \
XltAppInitialize.3 \
XltAppShell.3 \
XltBubbleButton.3 \
XltCheckArgSize.3 \
XltCreateAnimatedButton.3 \
XltCreateBubbleButton.3 \
XltCreateFilePicker.3 \
XltCreateHost.3 \
XltCreateNumEntry.3 \
XltDisplayFallbackResources.3 \
XltDisplayOptions.3 \
XltEntrySB.3 \
XltFilePicker.3 XltFilePickerGetChild.3 XltFilePickerGetString.3 XltFilePickerSetString.3 \
XltFontChooser.3 \
XltGetValues.3 \
XltHost.3 XltHostCreateTranscript.3 XltHostDiscardOutput.3 XltHostSelect.3 XltHostSendData.3 XltHostSendString.3 \
XltNumEntry.3 XltNumEntryGetChild.3 \
XltRedirectStdErr.3 \
XltSelectionBox.3 \
XltSelectDebugLevel.3 \
XltSetClientIcon.3 \
XltSetValues.3 \
XltSlideContext.3 \
XltToolBarConfigure.3 \
XltToolBarAddItem.3 \
XltWaitTillMapped.3 \
XltWorking.3 \
XltYesNo.3 \
XltRdbPutString.3 \
XltAppAddTimeOut.3

html_HTML = SciPlot.html SciPlotProg.html SciPlotDemo.html \
            SciPlotTitle.gif SciPlotExample.gif SciPlotDemo.gif \
            ListTree.html ListTreeProg.html \
            ListTree.gif ListTreeTitle.gif TreeFSel.gif new.gif \
	    LiteClue.html

html_DATA = $(html_HTML)

htmldir= $(prefix)/Xlt/doc/html
