#
# $Header: /cvsroot/xlt/Xlt/tests/Makefile.am,v 1.17 2005/04/18 15:34:52 dannybackx Exp $
#

MAINTAINERCLEANFILES=Makefile.in
SUBDIRS = AnimatedButton  AppShell  BubbleButton  EntrySB  \
          FilePicker  FontChooser  Host  ListTree  NodeButton  NumEntry \
          SciPlot  SelectionBox  Slide  Strokes  ToolBar \
          WaitTillMapped  YesNo Rdb LiteClue
