MAINTAINERCLEANFILES = Makefile.in
EXTRA_DIST = eye1.xpm \
eye2.xpm \
eye3.xpm \
eye4.xpm \
eye5.xpm \
eye6.xpm \
eye7.xpm \
eye8.xpm \
eye9.xpm \
eye10.xpm \
eye11.xpm \
eye12.xpm \
eye13.xpm \
eye14.xpm \
eye15.xpm \
eye16.xpm \
eye17.xpm \
eye18.xpm \
eye19.xpm \
eye20.xpm \
eye21.xpm \
eye22.xpm \
eye23.xpm \
eye24.xpm

noinst_PROGRAMS = test3  test4

INCLUDES = -I$(srcdir)/../../lib @MOTIF_CFLAGS@ @X_CFLAGS@ @XPM_CFLAGS@

LDADD = ../../lib/libXlt.la
