MAINTAINERCLEANFILES = Makefile.in

EXTRA_DIST = dates.xpm \
floppy3.xpm \
new_acc.xpm \
new_trans.xpm \
open.xpm \
plot_acc.xpm \
print.xpm \
recur_trans.xpm \
stopsign.xpm \
view_acc.xpm \
view_trans.xpm

noinst_PROGRAMS = test1

INCLUDES = -I$(srcdir)/../../lib @MOTIF_CFLAGS@ @X_CFLAGS@ @XPM_CFLAGS@

LDADD = ../../lib/libXlt.la

