# @(#)$Mu: mgv/lib/toolbar/Makefile.am 1.6 1998/08/29 00:01:53 $
##
## Makefile.am
##	automake file for mgv/lib/toolbar.
##
## Copyright (C) 1998 Eric A. Howe
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
##
##   Authors:	Eric A. Howe (mu@trends.net)
##

MAINTAINERCLEANFILES = Makefile.in

mu_bitmaps = \
	fileOpen-i.xbm fileOpen.xbm \
	filePrint-i.xbm filePrint.xbm \
	helpContext-i.xbm helpContext.xbm \
	magstepDecr-i.xbm magstepDecr.xbm \
	magstepIncr-i.xbm magstepIncr.xbm \
	mark-i.xbm mark.xbm \
	markAll-i.xbm markAll.xbm \
	markEven-i.xbm markEven.xbm \
	markNone-i.xbm markNone.xbm \
	markOdd-i.xbm markOdd.xbm \
	pageNext-i.xbm pageNext.xbm \
	pagePrev-i.xbm pagePrev.xbm

mu_pixmaps = \
	fileOpen-i.xpm fileOpen.xpm \
	filePrint-i.xpm filePrint.xpm \
	helpContext-i.xpm helpContext.xpm \
	magstepDecr-i.xpm magstepDecr.xpm \
	magstepIncr-i.xpm magstepIncr.xpm \
	mark-i.xpm mark.xpm \
	markAll-i.xpm markAll.xpm \
	markEven-i.xpm markEven.xpm \
	markNone-i.xpm markNone.xpm \
	markOdd-i.xpm markOdd.xpm \
	pageNext-i.xpm pageNext.xpm \
	pagePrev-i.xpm pagePrev.xpm

toolbardir = $(pkgdatadir)/$(VERSION)/toolbar
toolbar_DATA = $(mu_bitmaps) $(mu_pixmaps)
